# CDTree

./: README.md  pyproject.toml
src/: confounder_processor.py
src/example/: example_usage_forest.py  example_usage_tree.py  example_usage_tree_v2.py
src/experimental/: experimental_causal_tree.py  experimental_causal_tree_v2.py  run_experiment_tree_A.py
src/model/: cd_forest.py  cd_tree.py
